--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "DEBUG=webrtc* node bin/server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tape test/index.js"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,8 @@
   },
   "devDependencies": {
     "electron-webrtc": "^0.3.0",
-    "simple-peer": "^6.4.3"
+    "simple-peer": "^6.4.3",
+    "tape": "^4.6.3",
+    "wrtc": "0.0.61"
   }
 }
