--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,15 @@ node_js:
   - "5"
   - "4"
 
+apt:
+  sources:
+    - ubuntu-toolchain-r-test
+  packages:
+    - g++-4.8
+  env:
+    global:
+    - CXX=g++-4.8
+
 branches:
   only:
     - master
