--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "webrtc-tree-overlay-bootstrap",
+  "name": "webrtc-bootstrap",
   "version": "2.0.0",
-  "description": "Bootstrap client and server to create a WebRTC tree overlay",
+  "description": "Bootstrap client and server to bootstrap WebRTC connections made with simple-peer",
   "main": "src/index.js",
   "scripts": {
     "start": "DEBUG=webrtc* node bin/server",
@@ -9,14 +9,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/elavoie/webrtc-tree-overlay-bootstrap.git"
+    "url": "git+https://github.com/elavoie/webrtc-bootstrap.git"
   },
   "author": "Erick Lavoie",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/elavoie/webrtc-tree-overlay-bootstrap/issues"
+    "url": "https://github.com/elavoie/webrtc-bootstrap/issues"
   },
-  "homepage": "https://github.com/elavoie/webrtc-tree-overlay-bootstrap#readme",
+  "homepage": "https://github.com/elavoie/webrtc-bootstrap#readme",
   "dependencies": {
     "debug": "^2.6.1",
     "express": "^4.14.1",
