--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webrtc-bootstrap",
-  "version": "3.1.3",
+  "version": "3.1.4",
   "description": "Bootstrap client and server to bootstrap WebRTC connections made with simple-peer",
   "main": "src/index.js",
   "scripts": {
@@ -19,11 +19,10 @@
   "homepage": "https://github.com/elavoie/webrtc-bootstrap#readme",
   "dependencies": {
     "debug": "^2.6.9",
-    "simple-peer": "^6.4.3",
-    "simple-websocket": "^5.1.1",
+    "simple-peer": "^9.3.0",
+    "simple-websocket": "^7.2.0",
     "tape": "^4.10.1",
-    "webrtc-bootstrap-server": "^3.1.3",
-    "ws": "^2.3.1"
+    "webrtc-bootstrap-server": "^3.1.4"
   },
   "devDependencies": {
     "wrtc": "^0.3.7"
